@@ -15,8 +15,8 @@ ignoreip = 127.0.0.1
 # "bantime" is the number of seconds that a host is banned.
 bantime  = 600
 # A host is banned if it has generated "maxretry" during the
-# last "maxtime" seconds.
-maxtime  = 3600
+# last "findtime" seconds.
+findtime  = 600
 # "maxretry" is the number of failures before a host get banned.
 maxretry = 3
 
