@@ -151,10 +151,6 @@ class Transmitter:
 			value = command[2]
 			self.__server.setIgnoreRegex(name, value)
 			return self.__server.getIgnoreRegex(name)
-		elif command[1] == "maxtime":
-			value = command[2]
-			self.__server.setMaxTime(name, int(value))
-			return self.__server.getMaxTime(name)
 		elif command[1] == "findtime":
 			value = command[2]
 			self.__server.setFindTime(name, int(value))
@@ -233,8 +229,6 @@ class Transmitter:
 			return self.__server.getFailRegex(name)
 		elif command[1] == "ignoreregex":
 			return self.__server.getIgnoreRegex(name)
-		elif command[1] == "maxtime":
-			return self.__server.getMaxTime(name)
 		elif command[1] == "findtime":
 			return self.__server.getFindTime(name)
 		elif command[1] == "maxretry":
